# solid-guacamole

./: .rustfmt.toml  Cargo.toml  README.md  Rocket.toml
public/: board.js  board_state_manager.js  chess.html  chess.js  client.js  common.js  controller.js
src/: bitboard.rs  common.rs  main.rs  move_gen.rs  transposition_table.rs  zobrist.rs
src/chess/: bitboard.rs  mod.rs  position.rs  zobrist.rs
src/core/: Cargo.toml
src/core/bitboard/: chess.rs  position.rs
src/core/bitboard/move_gen/: bishop_move_gen.rs  king_move_gen.rs  knight_move_gen.rs  pawn_move_gen.rs  queen_move_gen.rs
src/core/search/: alphabeta_minimax_searcher.rs  minimax_searcher.rs  move_search.rs
src/core/src/bitboard/: Cargo.toml
src/core/src/bitboard/src/: chess.rs  lib.rs  position.rs
src/core/src/evaluation/: Cargo.toml
src/core/src/evaluation/src/: lib.rs  position_evaluator.rs
src/core/src/move_gen/: Cargo.toml
src/core/src/move_gen/src/: bishop.rs  king.rs  knight.rs  lib.rs  pawn.rs  queen.rs  rook.rs
src/core/src/search/src/: minimax_searcher.rs  move_search.rs
src/evaluation/: checkmate_evaluator.rs  material_evaluator.rs  mod.rs  piece_coordinate_evaluator.rs  position_evaluator.rs  search_evaluator.rs
src/lichess/: lichess_client.rs
src/move_gen/: bishop.rs  bishop_test.rs  internal.rs  king.rs  king_test.rs  knight.rs  knight_test.rs  mod.rs  pawn.rs  pawn_test.rs  position_util.rs  queen.rs  queen_test.rs  rook.rs  rook_test.rs
src/public/: chess.html  chess.js
src/runtime/: mod.rs
src/search/: alphabeta_minimax_searcher.rs  minimax_searcher.rs
(+5 files in other folders)
