[package]
name = "chess_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
serde = "1.0"
strum = "0.9.0"
strum_macros = "0.9.1"
rocket = "=0.5.0-rc.3"
rocket_contrib = { version = "0.4.11", features = ["tera", "templates"] }

[build]
rustc = "nightly"
