[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitboard = {path = "src/bitboard"}
search = {path = "src/search"}
evaluation = {path = "src/evaluation"}
move_gen = {path = "src/move_gen"}
